--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,11 @@
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
-#spring.datasource.url=jdbc:mariadb://121.178.2.4:3306/ked_test
-#spring.datasource.username=ba_dev
-#spring.datasource.password=1234
+spring.datasource.url=jdbc:mariadb://121.178.2.4:3306/ked_test
+spring.datasource.username=ba_dev
+spring.datasource.password=1234
 
-spring.datasource.url=jdbc:mysql://ba-prd-db.c77o6fqox9sm.ap-northeast-2.rds.amazonaws.com:3306/ked_test
-spring.datasource.username=admin
-spring.datasource.password=kty774912!
+#spring.datasource.url=jdbc:mysql://ba-prd-db.c77o6fqox9sm.ap-northeast-2.rds.amazonaws.com:3306/ked_test
+#spring.datasource.username=admin
+#spring.datasource.password=kty774912!
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.format_sql=true;
